# generated/structs.go
@@ -62,3 +62,9 @@ type Candidate struct {
     MetaData SerializationMetadata `json:"-"`
 }
 
+type LoginRequestBody struct {
+    Username string `json:"username"`
+    Password string `json:"password"`
+    MetaData SerializationMetadata `json:"-"`
+}
+
