# swagger.yaml
@@ -135,6 +135,30 @@ paths:
           description: something
           schema:
             $ref: "#/definitions/Ballot"
+  "/login":
+    x-swagger-router-controller: authentication
+    post:
+      operationId: login
+      parameters:
+      - name: body
+        in: body
+        required: true
+        schema:
+          type: object
+          required:
+          - username
+          - password
+          properties:
+            username:
+              type: string
+            password:
+              type: string
+      responses:
+        '200': 
+          description: something
+          schema:
+            type: object
+
   
 parameters:
   id:
